// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText  1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
/>
`;

exports[`RichText  2`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
>
  <h1>
    Happy little clouds
  </h1>
</div>
`;

exports[`RichText  3`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Nice little fluffy clouds laying around in the sky being lazy.</p>",
    }
  }
/>
`;

exports[`RichText  4`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0 test-class"
>
  <h1>
    Happy little clouds
  </h1>
</div>
`;

exports[`RichText renders 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
/>
`;

exports[`RichText renders with children 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
>
  <h1>
    Happy little clouds
  </h1>
</div>
`;

exports[`RichText renders with custom className 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0 test-class"
>
  <h1>
    Happy little clouds
  </h1>
</div>
`;

exports[`RichText renders with dangerouslySetInnerHTML 1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 ul,
.emotion-0 ol {
  padding-left: 24px;
}

.emotion-0 ul li {
  list-style: none;
}

.emotion-0 ul li:before {
  content: '\\B7';
  vertical-align: middle;
  font-size: 20px;
  padding-right: 12px;
  margin-left: -14px;
}

.emotion-0 h1 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

.emotion-0 h2 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.25;
  margin: 0;
  text-align: initial;
}

.emotion-0 h3 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

.emotion-0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #006eaf;
  outline: none;
}

.emotion-0 a:hover {
  color: #006eaf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-text-decoration-color: #006eaf;
  text-decoration-color: #006eaf;
}

.emotion-0 a:focus {
  color: #006eaf;
  outline: solid 2px rgba(6,150,215,0.35);
}

.emotion-0 p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0 0 12px 0;
  text-align: initial;
}

.emotion-0 h1 + p,
.emotion-0 h2 + p,
.emotion-0 h3 + p {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 16px 0 12px 0;
  text-align: initial;
}

.emotion-0 b,
.emotion-0 strong {
  font-weight: 700;
}

<div
  className="emotion-0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Nice little fluffy clouds laying around in the sky being lazy.</p>",
    }
  }
/>
`;
